# opsml

./: .coveragerc  .drone.yml  .gitignore  Makefile  README.md  audit.html  docker-compose.yaml  opsml-test-20230519151327-pipeline.json  opsml-test-20230520174319-pipeline.json  opsml-test-20230520174732-pipeline.json  opsml-test-20230520174920-pipeline.json  opsml-test-20230520175030-pipeline.json  opsml-test-20230521211236-pipeline.json  opsml-test-20230521211911-pipeline.json  package-lock.json  package.json  pyproject.toml  setup.cfg  tmp.html
.github/: CODEOWNERS  pull_request_template.md  reviewer_config.yml
.github/workflows/: docker-push.yml  integration.yml  lint-unit-tests.yml  publish.yml  release-candidate.yml  release.yml
cards/metadata/: index.html
cards/runcard/: index.html
docker/: Dockerfile  docker-compose.yaml
docs/docs/: index.md
docs/examples/: datacard.py
examples/: requirements.txt
examples/docker/: Makefile  pyproject.toml
opsml-test-20230523011724/: local-spec.yaml
opsml-test-20230523011724/pipeline/: test_task.py  test_task2.py
opsml/app/: main.py
opsml/cards/: base.py  data.py  model.py  pipeline.py  project.py  run.py
opsml/cli/: api_cli.py
opsml/helpers/: exceptions.py  gcp_utils.py  logging.py  request_helpers.py  types.py  utils.py
opsml/types/: sql.py  (+4 more)
search/: search_index.json
tests/: conftest.py  mock_api_registries.py
tests/assets/pipeline_example/: example-spec.yaml  kubeflow-example-spec.yaml  pyproject.toml  vertex-example-local-spec.yaml  vertex-example-spec.yaml
tests/assets/pipeline_example/pipeline/: get_data.py  train_model.py
(+430 files in other folders)
